[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-console = "0.2.3"
wasm-bindgen = "0.2.87"
yew = { version="0.20", features=["csr"] }
ethers = { git = "https://github.com/rndlabs/ethers-rs", branch = "features/eip1193" }
ethers-providers = { git = "https://github.com/rndlabs/ethers-rs", branch = "features/eip1193" }
wasm-bindgen-futures = "0.4.37"
gloo-utils = "0.1.7"
